--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_NAME= "funcionarios"
-DB_USER= "admin"
-DB_PASSWORD= "12345678"
-DB_HOST= "database-1.cjr2rlksblsf.us-east-1.rds.amazonaws.com"
-DB_PORT= "3306"
+# DB_NAME= "funcionarios"
+# DB_USER= "admins"
+# DB_PASSWORD= "12345678"
+# DB_HOST= "database-1.cjr2rlksblsf.us-east-1.rds.amazonaws.com"
+# DB_PORT= "3306"
