--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/clodomirLima/desafio-funcionario#readme",
   "dependencies": {
+    "chai": "^4.3.10",
     "dotenv": "^16.0.3",
     "express": "^4.17.2",
     "jaeger-tracer-decorator": "^3.0.2",
@@ -25,6 +26,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
-    "sequelize": "^6.21.3"
+    "sequelize": "^6.21.3",
+    "sino": "^0.0.3"
   }
 }
