--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio-funcionario",
+  "name": "micro-servico-pessoas",
   "version": "1.0.0",
   "description": "Microsserviço de Pessoas",
   "main": "index.js",
